--- a/index.html
+++ b/index.html
@@ -6,8 +6,5 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>TEST</h1>
-    <h2>Fafa</h2>
-  </body>
+  <body></body>
 </html>
